# AI-POC

./: .cursorrules  .gitignore  README.md  pyproject.toml  ruff.toml
src/data/: results.xlsx
src/poc/: utils.py
src/poc/20. 이미지_인페인팅/: 인페인팅.ipynb
src/poc/35.가상피팅/: 가상모델생성_피팅.ipynb
src/poc/40. 이미지_상품등록_자동화/: godomall.http  이미지_분석_상품정보추출.ipynb
src/poc/50. 쇼핑몰_요약_분석/: 판매분석.ipynb
src/poc/70. 리뷰_AI 분석/: 리뷰_키워드요약_긍정부정.ipynb
src/poc/80. 상품문의_답변봇/: 상품문의.ipynb
src/poc/90. 전화상담_일대일문의_AI적용/: cos-qna.db  results.xlsx  음성_텍스트.ipynb  일대일문의_강성_추출.ipynb
